Bug 458411 - Integrated terminal in Dolphin should use \r as line terminator instead of \n
Summary: Integrated terminal in Dolphin should use \r as line terminator instead of \n
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: terminal (other bugs)
Version First Reported In: 22.04.3
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-28 08:15 UTC by Yesterday17
Modified: 2022-11-23 20:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yesterday17 2022-08-28 08:15:10 UTC
SUMMARY

The integrated terminal in Dolphin executes `cd` and `clear` commands with `\n` as line terminator. The `\n` here should be replaced with `\r` as the behavior of Konsole.

Corresponding issue:
https://github.com/nushell/nushell/issues/6427

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux
KDE Plasma Version: 5.24.6
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.5
Kernel Version: 5.15.60-1-MANJARO (64-bit)
Graphics Platform: X11
Processors: 32 × AMD Ryzen 9 5950X 16-Core Processor
Memory: 62.7 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 3070 Ti/PCIe/SSE2

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-08-28 09:13:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/441
Comment 2 ratijas 2022-11-23 20:05:01 UTC
Git commit dfe05c587beab876c0bf0718b84c7ed14bafde95 by ivan tkachenko, on behalf of Haozhe Jiang.
Committed on 23/11/2022 at 17:46.
Pushed by felixernst into branch 'master'.

Use \r to terminate command in integrated terminal

\r should be used instead of \n

M  +2    -2    src/panels/terminal/terminalpanel.cpp

https://invent.kde.org/system/dolphin/commit/dfe05c587beab876c0bf0718b84c7ed14bafde95