Use \r to terminate command in integrated terminal

\r should be used instead of \n

BUG: 458411